<resources>
    <string name="app_name">My Application</string>

    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_collection_item">Plats</string>
    <string name="bottom_add_plat_item">Ajouter</string>


    <string name="cuizinet">Cuizinet</string>
    <string name="home_page_title">Découvrir</string>

    <string name="home_page_last_plat">home_page_last_plat</string>
    <string name="derniers_plats">Derniers Plats</string>
    <string name="collection_page_title">Ma Collection</string>
    <string name="add_plat_page_title">Ajout d\'un plat</string>

    <string name="plat">Plat</string>
    <string name="description">Description</string>
    <string name="popup_plat_name">popup_plat_name</string>
    <string name="popup_plant_description_title">popup_plant_description_title</string>
    <string name="popup_plat_description_title" />
    <string name="description_plat_pop">description_plat_pop</string>
    <string name="popup_petite_description">popup_petite_description</string>
    <string name="temps_de_cuisson">Temps de cuisson</string>
    <string name="temp_rature">Température</string>
    <string name="plat_name">plat name</string>
    <string name="nom_du_plat">nom du plat</string>
    <string name="description_du_plat">description du plat</string>
    <string name="confirmer">Confirmer</string>
    <string name="charger_image">CHARGER IMAGE</string>
    <string-array name="add_plat_temps">
        <item> Temps de cuisson : 30 </item>
        <item> Temps de cuisson : 60 </item>
        <item> Temps de cuisson : 75 </item>
    </string-array>
    <string-array name="add_plat_temp">
        <item> Temperature : 180 </item>
        <item> Temperature : 200 </item>
        <item> Temperature : 220 </item>
    </string-array>
</resources>