<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charger_image"
        android:background="@color/teal_700"
        android:padding="@dimen/default_margin" />
        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/imageand"/>

</LinearLayout>
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:hint="@string/nom_du_plat"
        android:paddingLeft="@dimen/default_margin"/>
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:hint="@string/description_du_plat"
        android:paddingLeft="@dimen/default_margin"/>
    <Spinner
        android:id="@+id/temps_cuisson_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:entries="@array/add_plat_temps"
        android:paddingLeft="@dimen/default_margin"/>
    <Spinner
        android:id="@+id/temperature_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:entries="@array/add_plat_temp"
        android:paddingLeft="20dp"/>
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/eton_blue"
        android:text="@string/confirmer" />
</LinearLayout>