<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/imageand" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_plat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plat_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_plat_pop"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_plat_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_petite_description"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/popup_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_description_title" />

    <TextView
        android:id="@+id/popup_temps_cuisson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temps_de_cuisson"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_plat_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_plat_description_subtitle" />

    <TextView
        android:id="@+id/popup_description_temps_cuisson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description temps de cuisson"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/popup_temps_cuisson"
        app:layout_constraintTop_toBottomOf="@+id/popup_temps_cuisson"
        />

    <TextView
        android:id="@+id/popup_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_rature"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_description_temps_cuisson"
        app:layout_constraintTop_toBottomOf="@+id/popup_description_temps_cuisson" />

    <TextView
        android:id="@+id/popup_description_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description température"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/popup_temperature"
        app:layout_constraintTop_toBottomOf="@+id/popup_temperature" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description_temperature" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>